--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
-    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -68,8 +67,7 @@
                                 <li class="widget-49-bot-item"><span>Ideal for FAQs</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <!-- <a href="http://localhost:8501" class="btn btn-sm btn-flash-border-primary" target="_blank">Try Now</a> -->
-                                <a href="https://talk2ai.onrender.com" class="btn btn-sm btn-flash-border-primary"
+                                <a href="http://localhost:8501" class="btn btn-sm btn-flash-border-primary"
                                     target="_blank">Try Now</a>
                             </div>
                         </div>
@@ -100,10 +98,8 @@
                                 <li class="widget-49-bot-item"><span>Generate SQL Queries</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <!-- <a href="http://localhost:8502" class="btn btn-sm btn-flash-border-success" target="_blank">Try Now</a> -->
-                                <a href="{{ url_for('under_construction') }}"
-                                    class="btn btn-sm btn-flash-border-success" target="_blank">Try Now</a>
-                                <!-- <a href="https://talk2csv.onrender.com" class="btn btn-sm btn-flash-border-success" target="_blank">Try Now</a> -->
+                                <a href="http://localhost:8502" class="btn btn-sm btn-flash-border-success"
+                                    target="_blank">Try Now</a>
                             </div>
                         </div>
                     </div>
@@ -133,11 +129,8 @@
                                 <li class="widget-49-bot-item"><span>Upload Images and Chat with AI Model</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <!-- <a href="http://localhost:8503" class="btn btn-sm btn-flash-border-info" target="_blank">Try Now</a> -->
-                                <a href="{{ url_for('under_construction') }}"
-                                    class="btn btn-sm btn-flash-border-success" target="_blank">Try Now</a>
-                                <!-- <a href="https://talk2image.onrender.com" class="btn btn-sm btn-flash-border-info"
-                                    target="_blank">Try Now</a> -->
+                                <a href="http://localhost:8503" class="btn btn-sm btn-flash-border-info"
+                                    target="_blank">Try Now</a>
                             </div>
                         </div>
                     </div>
@@ -167,9 +160,8 @@
                                 <li class="widget-49-bot-item"><span>Chat with Multiple PDFs Simultaneously</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <a href="https://talk2pdf-sd.streamlit.app/" class="btn btn-sm btn-flash-border-danger"
+                                <a href="http://localhost:8504" class="btn btn-sm btn-flash-border-danger"
                                     target="_blank">Try Now</a>
-                                <!-- <a href="http://localhost:8504" class="btn btn-sm btn-flash-border-danger" target="_blank">Try Now</a> -->
                             </div>
                         </div>
                     </div>
@@ -200,11 +192,8 @@
                                 <li class="widget-49-bot-item"><span>Get Answers from Website Queries</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <!-- <a href="http://localhost:8505" class="btn btn-sm btn-flash-border-warning" target="_blank">Try Now</a> -->
-                                <a href="{{ url_for('under_construction') }}"
-                                    class="btn btn-sm btn-flash-border-success" target="_blank">Try Now</a>
-                                <!-- <a href="https://talk2websites.onrender.com" class="btn btn-sm btn-flash-border-warning"
-                                    target="_blank">Try Now</a> -->
+                                <a href="http://localhost:8505" class="btn btn-sm btn-flash-border-warning"
+                                    target="_blank">Try Now</a>
                             </div>
                         </div>
                     </div>
@@ -234,11 +223,8 @@
                                 <li class="widget-49-bot-item"><span>Get Answers from Youtube Videos</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <!-- <a href="https://talk2ytube.onrender.com" class="btn btn-sm btn-flash-border-dark"
-                                    target="_blank">Try Now</a> -->
-                                <a href="{{ url_for('under_construction') }}"
-                                    class="btn btn-sm btn-flash-border-success" target="_blank">Try Now</a>
-                                <!-- <a href="http://localhost:8506" class="btn btn-sm btn-flash-border-dark" target="_blank">Try Now</a> -->
+                                <a href="http://localhost:8506" class="btn btn-sm btn-flash-border-dark"
+                                    target="_blank">Try Now</a>
                             </div>
                         </div>
                     </div>
@@ -268,11 +254,8 @@
                                 <li class="widget-49-bot-item"><span>Perfect for current news and trends</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <!-- <a href="http://localhost:8507" class="btn btn-sm btn-flash-border-light" target="_blank">Try Now</a> -->
-                                <a href="{{ url_for('under_construction') }}"
-                                    class="btn btn-sm btn-flash-border-success" target="_blank">Try Now</a>
-                                <!-- <a href="https://talk2netassistai.onrender.com"
-                                    class="btn btn-sm btn-flash-border-light" target="_blank">Try Now</a> -->
+                                <a href="http://localhost:8507" class="btn btn-sm btn-flash-border-light"
+                                    target="_blank">Try Now</a>
                             </div>
                         </div>
                     </div>
