--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>ChatFusion 🗨️</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 
 <body>
@@ -67,8 +67,8 @@
                                 <li class="widget-49-bot-item"><span>Ideal for FAQs</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <a href="http://localhost:8501" class="btn btn-sm btn-flash-border-primary"
-                                    target="_blank">Try Now</a>
+                                <a href="/talk2ai" class="btn btn-sm btn-flash-border-primary"
+                                target="_blank">Try Now</a>
                             </div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                                 <li class="widget-49-bot-item"><span>Generate SQL Queries</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <a href="http://localhost:8502" class="btn btn-sm btn-flash-border-success"
+                                <a href="/talk2csv" class="btn btn-sm btn-flash-border-success"
                                     target="_blank">Try Now</a>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                                 <li class="widget-49-bot-item"><span>Upload Images and Chat with AI Model</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <a href="http://localhost:8503" class="btn btn-sm btn-flash-border-info"
+                                <a href="/talk2image" class="btn btn-sm btn-flash-border-info"
                                     target="_blank">Try Now</a>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
                                 <li class="widget-49-bot-item"><span>Chat with Multiple PDFs Simultaneously</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <a href="http://localhost:8504" class="btn btn-sm btn-flash-border-danger"
+                                <a href="/talk2pdf" class="btn btn-sm btn-flash-border-danger"
                                     target="_blank">Try Now</a>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                                 <li class="widget-49-bot-item"><span>Get Answers from Website Queries</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <a href="http://localhost:8505" class="btn btn-sm btn-flash-border-warning"
+                                <a href="/talk2websites" class="btn btn-sm btn-flash-border-warning"
                                     target="_blank">Try Now</a>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                                 <li class="widget-49-bot-item"><span>Get Answers from Youtube Videos</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <a href="http://localhost:8506" class="btn btn-sm btn-flash-border-dark"
+                                <a href="/talk2ytube" class="btn btn-sm btn-flash-border-dark"
                                     target="_blank">Try Now</a>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
                                 <li class="widget-49-bot-item"><span>Perfect for current news and trends</span></li>
                             </ol>
                             <div class="widget-49-bot-action">
-                                <a href="http://localhost:8507" class="btn btn-sm btn-flash-border-light"
+                                <a href="/talk2netassistai" class="btn btn-sm btn-flash-border-light"
                                     target="_blank">Try Now</a>
                             </div>
                         </div>
